// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card is rendered 1`] = `
.emotion-6 {
  font-weight: bold;
}

.emotion-17 {
  margin: 0.75rem;
}

.emotion-7 {
  margin: 0.75rem 0 0;
  color: hsl(0,0%,45%);
}

.emotion-16 > * {
  margin-top: 0.75rem;
}

.emotion-18 {
  border-radius: 0.25rem;
  box-shadow: 0 2px 6px 0 hsla(0,0%,0%,0.2);
}

.emotion-2 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-0 {
  border-radius: 0.25rem;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  width: 100%;
  height: 12rem;
  object-fit: cover;
}

.emotion-4 {
  color: hsl(44,56%,32%);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-8 {
  font-family: "Segoe UI Emoji";
  margin-right: 0.25em;
}

<div
  class="emotion-18 emotion-19"
>
  <a
    href="https://example.com"
    rel="nofollow"
    class="emotion-2 emotion-3"
  >
    <img
      src="https://url_to_img"
      alt="Little Big Burger"
      class="emotion-0 emotion-1"
    />
  </a>
  <div
    class="emotion-17"
  >
    <div
      class="emotion-6"
    >
      <a
        href="https://example.com"
        rel="nofollow"
        class="emotion-4 emotion-5"
      >
        Little Big Burger
      </a>
    </div>
    <p
      class="emotion-7"
    >
      100.00
    </p>
    <address
      class="emotion-16"
    >
      <div>
        <span
          class="emotion-11"
        >
          <span
            class="emotion-8"
            role="img"
            aria-label="round pushpin"
          >
            📍
          </span>
          <a
            href="https://url_to_map"
            class="emotion-4 emotion-5"
          >
            123 Main Street
          </a>
        </span>
      </div>
      <div>
        <span
          class="emotion-11"
        >
          <span
            class="emotion-8"
            role="img"
            aria-label="phone receiver"
          >
            📞
          </span>
          <a
            href="tel:503-543-2345"
            class="emotion-4 emotion-5"
          >
            503-543-2345
          </a>
        </span>
      </div>
    </address>
  </div>
</div>
`;

exports[`Card w/o phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -51,27 +51,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1nc9tcc-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             class=\\"css-lm9lwg-EmojiLabel-EmojiLabel\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-           <a
-             class=\\"css-yhnxzn-Link ek86r7m0\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price and phone is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -24,15 +24,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p
-       class=\\"css-omfnqx-Card-Card\\"
-     >
-       100.00
-     </p>
      <address
        class=\\"css-1t8qzrw-Card-Card\\"
      >
        <div>
          <span
@@ -51,27 +46,8 @@
            >
              123 Main Street
            </a>
          </span>
        </div>
-       <div>
-         <span
-           class=\\"css-1nc9tcc-EmojiLabel-EmojiLabel\\"
-         >
-           <span
-             aria-label=\\"phone receiver\\"
-             class=\\"css-lm9lwg-EmojiLabel-EmojiLabel\\"
-             role=\\"img\\"
-           >
-             📞
-           </span>
-           <a
-             class=\\"css-yhnxzn-Link ek86r7m0\\"
-             href=\\"tel:503-543-2345\\"
-           >
-             503-543-2345
-           </a>
-         </span>
-       </div>
      </address>
    </div>
  </div>"
`;

exports[`Card w/o price is rendered 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -24,15 +24,10 @@
          rel=\\"nofollow\\"
        >
          Little Big Burger
        </a>
      </div>
-     <p
-       class=\\"css-omfnqx-Card-Card\\"
-     >
-       100.00
-     </p>
      <address
        class=\\"css-1t8qzrw-Card-Card\\"
      >
        <div>
          <span"
`;
